--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -214,7 +214,7 @@ Maintaining optimum leaf temperature in relation to the biophysical environment,
 ![**Figure `r fig_leaf_T`. Theoretical expectations for variation in the elevation of $T_{leaf}$ above $T_{air}$ in response to (a) shortwave radiation, (b) wind speed, (c) relative humidity, (d) leaf width, and (e) stomatal conductance.** Leaf temperatures were modeled using the tealeaves R package of @muir_tealeaves_2019 parameterized to represent typical conditions for a broadleaf species (*Quercus rubra*) in a mesic temperate forest (Harvard Forest, Massachusetts, USA), as detailed in Appendix `r appendix_tealeaves_methods`. [ISSUE #6](https://github.com/EcoClimLab/vertical-thermal-review/issues/6).](leaf_energy_balance/leaf_energy_balance.png)
 
 **(paragraph on radiation as a driver)**
-Incoming solar radiation is a strong driver of leaf temperature, relative to $T_{air}$, such that even at low maximum $T_{air}$, leaves exposed to high radiation loads can experience elevated $T_{leaf}$, greater than $T_{air}$. On the other hand, under conditions of constant radiation and water availability, increase in $T_{air}$ can induce evaporative cooling [Drake et al. 2018] or under high $T_{air}$, can cause leaf heat stress [Fauset et al. 2018]. Dense canopies that buffer understory tend to absorb and reflect incoming radiation, therefore maintain greater $T_{leaf}$ than $T_{air}$ compared to lower canopy or understory, whereas open-forests, with greater light interception to forest floors, in some cases, exhibit a less pronounced gradient of leaf temperatures, and in other cases maintain greater $T_{leaf}$-$T_{air}$ in the lower canopies [**REF**]
+Incoming solar radiation is a strong driver of leaf temperature, relative to $T_{air}$, such that even at low maximum $T_{air}$, leaves exposed to high radiation loads can experience elevated $T_{leaf}$, greater than $T_{air}$. On the other hand, under conditions of constant radiation and water availability, increase in $T_{air}$ induces evaporative cooling [Drake et al. 2018] or under high $T_{air}$, can cause leaf heat stress [Fauset et al. 2018]. Dense canopies that buffer understory tend to absorb and reflect incoming radiation, therefore tend to maintain greater $T_{leaf}$ than $T_{air}$ compared to lower canopy or understory, whereas open-forests, with greater light interception to forest floors, in some cases, exhibit a less pronounced gradient of leaf temperatures, and in other cases maintain greater $T_{leaf}$-$T_{air}$ in the lower canopies [**REF**]
 
 Greater upper canopy wind speeds (Fig. `r fig_NEON_vertical`) result in higher boundary layer conductance ($g_{a}$) for canopy leaves, which increases linearly with wind velocity [@daudetWindSpeedLeaf1999a]. 
 Large $g_{a}$ to heat transfer, in turn, results in a smaller difference between $T_{leaf}$ and $T_{air}$. 
@@ -236,17 +236,14 @@ While small leaves remain within a few degrees of $T_{air}$, regardless of stoma
 While the high-light environment of the upper canopy would tend to dramatically increase $T_{leaf}$ above $T_{air}$, particularly under low-wind conditions, strong vertical gradients in leaf morphology and sometimes *evapotranspiration* have a counteractive effect, such that vertical trends in $T_{leaf}$ are much less pronounced than would be expected based on the physical setting alone.
 
 
-Particularly, in open forests with sparse distribution of trees, such as in needle-leaf forests, lower canopy $T_{leaf}$ can be substantially warmer than upper canopy $T_{leaf}$, reflecting microclimate conditions of increased vertical air mixing or heating from the ground [@mullerEvidenceEfficientNonevaporative2021], light permeating through canopy layers and low wind velocity or still air in the lower canopy compared to the upper canopy [@mullerEvidenceEfficientNonevaporative2021; @martin_boundary_1999; @zweifelMiddayStomatalClosure2002; @hadleyInfluenceKrummholzMat1987]. Greater heat stress and $T_{air}$ in the lower canopy is also observed in Australian desert trees [Curtis et al.] and among timberline krummholz needle-leaf trees growing close to the ground 
-[@hadleyInfluenceKrummholzMat1987].  Similarly, during the dry season in a semi-decidudous tropical moist forest in Panama where some trees loss canopy leaves, sun leaves can be cooled relative to $T_{air}$ more than lower canopy shade leaves [@rey-sanchez_spatial_2016]. Under other conditions $T_{leaf}$ tracks $T_{air}$ and therefore differs little between understory and canopy (Fig. `r fig_NEON_vertical`).
+Particularly, in open forests with sparse distribution of trees, such as in needle-leaf forests, lower canopy $T_{leaf}$ can be substantially warmer than upper canopy $T_{leaf}$, reflecting microclimate conditions of either increased vertical air mixing or heating from the ground [@mullerEvidenceEfficientNonevaporative2021], light permeating through canopy layers and low wind velocity or still air in the lower canopy compared to the upper canopy [@mullerEvidenceEfficientNonevaporative2021; @martin_boundary_1999; @zweifelMiddayStomatalClosure2002; @hadleyInfluenceKrummholzMat1987]. Greater heat stress and $T_{air}$ in the lower canopy is also observed in Australian desert trees [Curtis et al.] and among timberline krummholz needle-leaf trees growing close to the ground [@hadleyInfluenceKrummholzMat1987].  Similarly, in dry conditions, in a semi-decidudous tropical moist forest in Panama where some trees loss canopy leaves, sun leaves can be cooled relative to $T_{air}$ more than lower canopy shade leaves [@rey-sanchez_spatial_2016]. In other dry conditions, inner canopy can be warmer than above canopy and air temperature due to greater relative humidity [Dietz et al. 2007]. Under other conditions $T_{leaf}$ tracks $T_{air}$ and therefore differs little between understory and canopy (Fig. `r fig_NEON_vertical`).
 
 At night when solar radiation is not a factor, differences in $T_{leaf}$ across the vertical gradient are very modest; for instance, @bolstad_foliar_1999 observed similar nighttime $T_{leaf}$'s in the canopy and understory	of a temperate broadleaf forest. 
 
 **However, canopy leaves can reach much higher maximum $T_{leaf}$, and higher $T_{leaf} - T_{air}$, than understory leaves.**
-Especially in closed-canopy forests with increased buffering capacity, large leaf to air temperature differences and high leaf temperatures are found in the upper canopies compared to lower canopies of tropical forests that are substanially buffered, such as in Atlantic, Brazil forests [@fauset_differences_2018], Puerto Rico tropical wet, moist and subtropical wet forest[@mauTemperateTropicalForest2018a; Miller; ], semi-deciduous tropical forest during the wet season in Panama [@rey-sanchez_spatial_2016], and as well in a temperate forest [@mauTemperateTropicalForest2018a].   
+Especially in closed-canopy forests with increased buffering capacity, large leaf to air temperature differences and high leaf temperatures are found in the upper canopies compared to lower canopies, caused by midday stomatal closure that reduces transpirational cooling [Slot et al. 2019]. This is seen in Atlantic, Brazil forests [@fauset_differences_2018], Puerto Rico tropical wet, moist and subtropical wet forest[@mauTemperateTropicalForest2018a; Miller; ], semi-deciduous tropical forest during the wet season in Panama [@rey-sanchez_spatial_2016], and as well in a temperate forest [@mauTemperateTropicalForest2018a].   
 
-In three forest types-- temperate, tropical wet and tropical moist, $T_{leaf max}$ exceeded temperature optimum for photosynthesis $T_{opt}$ in upper canopies of all sites with $T_{leaf max}$ exceeding $T_{opt}$ at different canopy heights and temperatures in all forests, with no significant relationship between $T_{opt}$ and height. Additionally, with increasing height, $T_{leaf} - T_{air}$ difference increased in the upper canopies of all forests, exhibiting greatest $T_{leaf} - T_{air}$ in temperate deciduous forest compared to tropical moist and wet.
-- In a tropical wet and moist forests of Puerto Rico and temperate forests in Michigan, greater light input in exposed upper canopy leaves has been observed to increase leaf temperatures, sometimes 1-7C above ambient air temperature, making upper canopy leaves susceptible to heat stress, more than scattered light in lower shaded leaves [@mauTemperateTropicalForest2018a] 
--"Sun exposed outer canopy leaves in tropical trees can experience temperatures up 48 C during diurnal cycle, midday stomtal closure reduces transpitrational cooling" thus elevating leaf temperature greater than air temperature (Slot et al. 2019)
+In three forest types- US temperate deciduous, Puerto Rico tropical wet and tropical moist, $T_{leaf_{max}}$ exceeded temperature optimum for photosynthesis $T_{opt}$ in the upper canopies of all three forests, along with increasing $T_{leaf}$ - $T_{air}$  with height. $T_{leaf}$ - $T_{air}$ was observed to be greatest in temperate deciduous forest compared to tropical moist and wet. Greater light input in exposed upper canopy leaves can sometimes elevate leaf temperature $1-7{^\circ}C$ above air temperature, making upper canopy leaves susceptible to heat stress, more than scattered light in lower shaded leaves [Doughty and Gouden, 2008; @mauTemperateTropicalForest2018a] 
 
 
 ## Leaf traits 
@@ -302,13 +299,11 @@ nocite: |
 
 #### Morphological traits
 
-Along the vertical gradient, leaf temperature increases with effective leaf width and leaf size [Fauset et al. 2018], along with thermal time constant that is longer due to the increase in boundary layer thickness and stomatal resistance [@leighInfluenceLeafSize2017; Wright et al. 2019; @fauset_differences_2018]. Therefore, the rate of heat convection per unit area between leaf and air is lower for large leaves and greater for small leaves that are able to dissipate heat more efficiently than large leaves [@leighInfluenceLeafSize2017]. Exposed leaves reduce light exposures, and thus leaf temperature, by maintaining vertical leaf angles, or through temporary wilting [Niinemetes]1998. Other trait adaptions to dissapting heat such as lobes, serration, longer petiole length and stomtal density are evidently characteristics of sun exposed leaves than shaded leaves, help maintain a lower leaf temperature along a vertical gradient [@leighInfluenceLeafSize2017; @vogelConvectiveCoolingLow1970; @schueppTansleyReviewNo1993; @sackHowStrongIntracanopy2006]
+Along the vertical gradient, leaf temperature increases with effective leaf width and leaf size [Fauset et al. 2018], along with thermal time constant that is longer due to the increase in boundary layer thickness and stomatal resistance [@leighInfluenceLeafSize2017; Wright et al. 2019; @fauset_differences_2018]. Therefore, the rate of heat convection per unit area between leaf and air is lower for large leaves and greater for small leaves that are able to dissipate heat more efficiently than large leaves [@leighInfluenceLeafSize2017]. Exposed leaves reduce light exposures, and thus leaf temperature, by maintaining vertical leaf angles, or through temporary wilting [Ishida et al. 1999; Niinemetes, 1998]. Other trait adaptions to dissapting heat such as lobes, serration, longer petiole length and stomtal density are evidently characteristics of sun exposed leaves than shaded leaves, help maintain a lower leaf temperature along a vertical gradient [@leighInfluenceLeafSize2017; @vogelConvectiveCoolingLow1970; @schueppTansleyReviewNo1993; @sackHowStrongIntracanopy2006]
  
 #### Biochemical and physiological traits
 
-
--Mitsutoshi kitao 2018: Canopy nitrogen distribution is optimized to prevent photoinhition for sun leaves during direct light and shade leaves during sunflecks. P uptake cannoy keep up wth increased growth at higher light [Poorter et al. 2019]
- In temperate Acer saccharum forest, within-canopy Acer saccharum exhibited greater LMA and $N area$ with height early in the growing season as a result of hydrostatic constraints on leaf morphology; however, in later growing season LMA and $N area$ continued to increase in the upper canopy due to light driven changes [@cobleLightDrivesVertical2014a; @cobleLightAcclimationOptimizes2015; @cobleHowVerticalPatterns2016].
+Canopy nitrogen distribution along the vertical gradient optimizes to prevent photoinhition for sun leaves during direct light and shade leaves during sunflecks, and could mediate sun vs. shade leaf response to heatflecks [Kitao et al. 2018]. Therefore, during growing season, nitrogen per area [$N_{area}$], along with LMA, leaf soluble sugars, starch and non-structural carbons increase with height and light, typically greater in exposed canopy positions or sun leaves compared to shade [@cobleLightDrivesVertical2014a; @cobleHowVerticalPatterns2016; Liu et al. 2010]. However, increase in temperature in upper canopy, shows a decrease in LMA and $N_{area}$ [Carter and Cavaleri, 2014] and in leaf soluble sugars, starch and non-structural carbons [Li et al.2016 **double check**]. Phosphorous per area follows a similar trend along the canopy gradient, but with increased growth at higher light P uptake, in some cases, cannot keep up [Poorter et al. 2019]  
  
 ##### *(Carotenoids/Xanthophyll cycle pigments)*
 
@@ -329,9 +324,9 @@ Proportional to vertical light gradients at an inter- and intra-species level, s
 
 ### Interspecific varaiation 
 
-Across tree-size ontogeny, canopy and understory trees of same species in tropical, temperate, and conifer forests show significant differences in leaf traits in their biophysical environment, however, the differences have been largely attributed to adaption to light conditions rather than ontogeny itself, therefore maintaing similar responses to changes in light with increasing height, as observed in within-species gradient [Rosendaal et al. 2006; Thomas and Winner, 2002; Houter and Pons 2012]. However, under constant light conditions of open-grown canopy and understory trees, for example in large gaps, evidence shows that canopy trees showed significantly greater LMA, photosynthetic capcity per area, and stomatal conductance compared to saplings, attributing the differences in traits to tree-size ontogeny [Thomas and Winner, 2002; Houter and Pons 2012] which also shapes leaf temperature. Across different species, while common adaptations to light and water are observed, inherent traits differences such as leaf shape, size and width, stomtal conductance levels influence leaf temperatures. Therefore, some species might be able to tolerate greater heat stress at a vertical gradient than others [[Fauset et al. 2018]. 
+Across tree-size ontogeny, canopy and understory trees of same species in tropical, temperate, and conifer forests show significant differences in fundamental light adapted leaf traits in their biophysical environment as observed and similar to within-species gradient [Rosendaal et al. 2006; Thomas and Winner, 2002; Houter and Pons 2012]. Under constant light conditions of open-grown canopy and understory trees, for example in large gaps, ontogeny differences in traits showed significantly greater LMA, photosynthetic capcity per area, and stomatal conductance in taller canopy trees compared to saplings [Thomas and Winner, 2002; Houter and Pons 2012]. Across  multi-species canopy and understory, while fundamental adaptations to light and water are observed, their pasticity to light differs along with inherent traits such as leaf shape, size and width, stomtal conductance levels influence leaf temperatures. Therefore, some species might more susceptible to heat stress at a vertical gradient than others [Fauset et al. 2018]. 
 
-On the basis of phenology, temperate understory  trees tended to leaf out earlier than canopy due to ontogenetic variation in tree size rather than biophysical conditions [Vitasse et al. 2013], and, increase in spring temperatures has shown to have implications on understory phenology, relative to canopy trees [Zohnner and Renner, 2019]. However, May spring heat waves can negetively impact partially expanded canopy leaves by inducing leaf shedding, more than saplings and understory [Filewood and Thomas, 2013]. Ontogenetic differences also suggests shade tolerators have lower leaf dry mass per area ($M_A$), greater photosynthetic capacity in low light and greater carbon gain capacities than in intolerators [@niinemetsControversyTraitsConferring2006] reflecting shade adaptation and avoidance strategies [Casal, 2013]. While shade intolerant species experience greater heterogeneity in light during ontogeny [poorter et al. 2013]. However, these findings conflict with  Kitajima 1994 who found for tropical seedlings; shade intolerance species grew faster in the sun and in the shade, but at the cost of higher mortality in the shade. Lawren and Karoru had contrasting findinds, and so far appears that there is no a consensus? How will leaf temperature vary between the two?
+Ontogenetic differences also suggests shade tolerators have lower leaf dry mass per area ($M_A$), greater photosynthetic capacity in low light and greater carbon gain capacities than in intolerators [@niinemetsControversyTraitsConferring2006]. While shade intolerant species experience greater heterogeneity in light during ontogeny [poorter et al. 2013]. However, these findings conflict with  Kitajima 1994 who found for tropical seedlings; shade intolerance species grew faster in the sun and in the shade, but at the cost of higher mortality in the shade. Lawren and Karoru had contrasting findinds, and so far appears that there is no a consensus? How will leaf temperature vary between the two?
 
  *(KAT: a lot of this content should probably move up the the intro to this section)*
 
@@ -357,21 +352,17 @@ nocite: |
 
 
 ### Stomatal conductance
-Photosynthesis can be largely constrained by stomatal conductance. 
 
-- Max stomatal conductance - increases with canopy height (Kenzo et al. 2015), however stomatal limitation is steeper also greater with hydraulic limitation, in sun leaves and in exposed canopies [Sanches et al. 2009; Hernandez] 
-Max transpiration rate - increases with canopy height (Kenzo et al. 2015), and quickly decreases with increasing VPD at greater heights [Scaffer].
--understory leaves open their stomata wider than upper canopy leaves [Kosugi et al. 2021]. Stomatal apeture, also controls heat dissapation through evaporative cooling [Taiz and Zeiger]. Stomatal opening is greater in understory compared to canopy
+While exposed sun leaves are equiped to thermoregulate more efficiently than shaded leaves, they are largely constrained by stomatal conductance; and therefore their ability to photosynthesize as well. Diurnally, stomtal conductance increases with height and is greater in the upper canopy compared to shaded canopies during the day [Kenzo et al. 2015; Sanches et al. 2009]. During midday, stomtal closure occurs, when evaporative demand exceeds water transport capacity in exposed leaves [Sanches et al. 2009; Zweinniecki et al. 2004]. Thus, stomatal limitation is greater and steeper in exposed canopies than shade leaves; therefore decreases with height [Sanches et al. 2009; Hernandez]. Similarly, max transpiration rate increases with canopy height [Kenzo et al. 2015]. Stomatal apeture, also controls heat dissapation through evaporative cooling [Taiz and Zeiger], where understory leaves tend to open their stomata wider than upper canopy leaves [Kosugi et al. 2021]. 
 
 ### Photosynthesis
 
-**Photosynthesis is generally higher in sun leaves-- a fact that is both theoretically expected and observed in numerous field studies (Table 2; Niinemets 2007 ; Kenzo et al. 2015 ; Slot et al. 2019; Chen et al. 2020).**
-This is primarily driven by the greater light available to sun leaves. Photosynthesis increases with increasing irradiance, and saturates at quantum flux density of 400 $m^{-2}$ $s^{-1}$ to 700nm $m^{-2}$ $s^{-1}$ or greater in upper canopy. Therefore, in dense canopies and across species, photosynthesis is greater at canopy tops where light is most available, compared to middle and lower canopy [REF]. However, light acclimated shade leaves have greater light use efficiency and therefore are observed to maintain higher photosynthetic capacity on a mass-basis? 
+**Photosynthesis is generally higher in sun leaves and exposed canopy positions-- a fact that is both theoretically expected and observed in numerous field studies (Table 2; Niinemets 2007 ; Kenzo et al. 2015 ; Slot et al. 2019; Chen et al. 2020).**
+This is primarily driven by the greater light available to sun leaves. Photosynthesis increases with increasing irradiance, and saturates at quantum flux density of 400 $m^{-2}$ $s^{-1}$ to 700nm $m^{-2}$ $s^{-1}$.  
 
-In response to the greater light availability, sun leaves have traits allowing greater photosynthetic rates at high light under sufficient nutrient and water conditions, including higher concentration of Rubsico, and multiple layers of palisade parenchyma. Light saturation levels differ between leaves and canopies, with leaves saturating at lower light level than canopies (while a certain amount of light saturates the photosynthetic capacity of the leaf, increasing the amount of light in the canopy may increase photosynthesis in the shaded part of the canopy)
-The vertical gradient in photosynthetic rates is also influenced by available concentration of N and P. (and water availability)
+In response to the greater light availability, sun leaves have traits allowing greater photosynthetic rates at high light under sufficient nutrient and water conditions, including higher concentration of Rubsico, and multiple layers of palisade parenchyma. Light saturation levels differ between leaves and canopies, with leaves saturating at lower light level than canopies (while a certain amount of light saturates the photosynthetic capacity of the leaf, increasing the amount of light in the canopy may increase photosynthesis in the shaded part of the canopy).The vertical gradient in photosynthetic rates is also influenced by available concentration of N and P. (and water availability)
 
-Leaf temperature reflects photosynthetic optimum temperature [**REF**]. Photosynthesis has a peaked response to temperature, where photosynthesis is commonly found to be maximized at the prevalent ambient growing season conditions (Tan et al. 2017; Slot & Winter 2017). Beyond the optimum, photosynthesis decreases as a result of stomatal closure, accompanied by an increase in leaf temperature in dense upper canopies tends to decrease phtotosynthesis [REF](e.g. Slot & Winter 2017; Smith et al. 2020 [temperate/boreal refs needed) and eventually due to biochemical constraints (refs. e.g. Sage & Kubien 2007; Varhammer et al. 2015 ). 
+Leaf temperature beyond photosynthetic optimum temperature, declines photosynthesis [**REF**]. Photosynthesis has a peaked response to temperature, where photosynthesis is commonly found to be maximized at the prevalent ambient growing season conditions (Tan et al. 2017; Slot & Winter 2017). Beyond the optimum, photosynthesis decreases as a result of stomatal closure and increasing leaf temperature (e.g. Slot & Winter 2017; Smith et al. 2020 [temperate/boreal refs needed) and eventually due to biochemical constraints (refs. e.g. Sage & Kubien 2007; Varhammer et al. 2015 ). 
 
 Photosynthesis will also be affected by heat stress, when photoinhibition reduces photosynthesis either as a result of photoprotective; non-photochemical quenching or related to irreversible leaf damage leading to leaf necrosis. At increasing temperatures, photosynthetic system II [PSII] is particularly vulnerable. Damage to PSII  can lead to decreased electron transport rates and photosynthetic failure. Irreversible damage to PSII is done at 40-60C [Baker 2008; @feeley_thermal_2020]. Leaves in upper canopy tend to experience more heat stress and greater photoinhibition than lower canopy leaves in conditions of water stress or drought. [@niinemetsWorldwideAnalysisWithincanopy2015] 
 
@@ -379,10 +370,8 @@ Photosynthesis will also be affected by heat stress, when photoinhibition reduce
 
 
 **We have very little evidence as to how the temperature sensitivity of photosynthesis compares between sun and shade leaves.**
-Biophysically, we might expect that sun leaves should tend to have a stronger temperature-dependence and higher temperature optima than shade leaves (Fig. 14.5 in Campbell and Norman 1998; *revisit this!*) *as observed by earlier studies, suggesting that the interaction between light gradient and temperature response along vertical canopy profile implied a spectrum of temperature responses of $T_{opt}$,$V_{max}$ and $J_{max}$ along the gradient [@niinemetsWithincanopyVariationRate2004a; Harley and Baldocchi 1995, Friend, 2001].* *(KAT: I'm confused by the second part of this sentence. Are these studies, or theoretical expectations?.)*
-However, such a trend is not apparent based on the limited number of field studies that have compared temperature sensitivity of photosynthesis in sun and shade leaves.
-For 3 species in Panama, the optimum temperature for sun leaves tended to be slightly higher than that of shade leaves, but differences were not significant [@slotPhotosyntheticHeatTolerance2019 ; @hernandezSimilarTemperatureDependence2020]. Similar results were found for $V_{max}$ and $J_{max}$ [@slotPhotosyntheticHeatTolerance2019, Hernandez et al.2020]
-Similarly, Mau et al. found no trend in the optimum temperature for net photosynthesis along a height gradient in Puerto Rico, and no significant trend in temperate trees [@mau_temperate_2018].
+Biophysically, we might expect that sun leaves should tend to have a stronger temperature-dependence and higher temperature optima than shade leaves (Fig. 14.5 in Campbell and Norman 1998; *revisit this!*), as optimum temperature $T_{opt}$ for $J_{max}$ has shown to increase with irradiance of an upper canopy leaf compared to shaded lower canopy leaf [Niinemetes et al. 1999b; Niinemetes and Valladares, 2004]. However, such a trend is not apparent based on the limited number of field studies that have compared temperature sensitivity of photosynthesis in sun and shade leaves.
+For 3 species in Panama, the optimum temperature for sun leaves tended to be slightly higher than that of shade leaves, but differences were not significant [@slotPhotosyntheticHeatTolerance2019 ; @hernandezSimilarTemperatureDependence2020]. Similar results were found for $V_{max}$ and $J_{max}$ [@slotPhotosyntheticHeatTolerance2019, Hernandez et al.2020]. Similarly, Mau et al. 2018 found no trend in the optimum temperature for net photosynthesis along a height gradient in Puerto Rico, and no significant trend in temperate trees [@mau_temperate_2018].
 
 *If we take geographic gradients as a reliable proxy, we'd expect temperature sensitivities to reflect the environment to which the trees are adapted/ acclimatized.*
 
@@ -392,11 +381,7 @@ Similarly, Mau et al. found no trend in the optimum temperature for net photosyn
 
 **Leaf thermal tolerance (Tcrit/ T50)**
 *(define)*
-Typical values ~45-50$^\circ$C, varying somewhat 
-across latitude/climate (O' sullivan et al. 2017),
-with elevation [@feeley_thermal_2020;  Slot et al unpublished data],
-with leaf traits [Sastry et al. 2018, @zhang_photosynthetic_2012].
-Tcrit is greater for buffered leaves that maintain greater effective leaf with [Slot et al. 2021]
+Typical values ~45-50$^\circ$C, varying somewhat across latitude/climate (O' sullivan et al. 2017), with elevation [@feeley_thermal_2020;  Slot et al unpublished data] and with leaf traits [Sastry et al. 2018, @zhang_photosynthetic_2012]. Tcrit is greater for buffered leaves that maintain greater effective leaf with [Slot et al. 2021]
 Perez and Feeley et al. 2020 found that across species sun leaves with higher photosynthetic heat tolerance experienced higher maximum temperatures and had narrower thermal safety margins. These species may thus be at a greater risk of thermal damage.  
 [- Elsa: also see: 
 - Perez, T.M. and Feeley, K.J., 2020. Weak phylogenetic and climatic signals in plant heat tolerance. Journal of Biogeography.]
@@ -405,10 +390,8 @@ Supporting the significant negative relationship between $T50$ and thermal safet
 
 **Thermal tolerance (e.g., $T_{50}$) varies with exposure, but there are no studies isolating effect of height.**
 For two of three species studied in a tropical moist forest in Panama, $T_{50}$ was slightly lower for shade than sun-exposed leaves, both measured near ground level (Slot et al. 2019). 
-Similarly, for *Acacia Papyrocarpa* (Benth.) trees in an arid region of southern Australia, higher $T_{50}$ was observed in more exposed (North-facing) canopy positions (Curtis et al. 2019). 
+However, for *Acacia Papyrocarpa* (Benth.) trees in an arid region of southern Australia, higher climatic heat stress and thus $T_{50}$ was observed in the lower canopy of North-facing canopy positions (Curtis et al. 2019). 
 We're not aware of any other studies on this."we may want to argue that we have no *a priori* reasons to expect thermal tolerance to scale with height per se (or do we?). I think it makes sense to expect variation with light exposure because of the associated differences in temperature you can expect the leaves to be exposed to, but height itself should not affect heat tolerance other than through associated traits perhaps"--Martijn Slot
-
-T50 might not capture thermal stress or sensitivity to increasing temperature in foliage, because the degree at which T50 is observed in leaves is at an extreme temperature not usually experienced by leaves acclimated to different light environment, at a lower foliage thermal stress point T50 might be irrelevant, but variation to extreme temperature response might be better understood through T50 [@perezPSIIHeatTolerances2020] 
 
 increased irradiance = increased VPD = increased air temp = midday stomatal closure =  decreased latent heat loss = increase leaf temperature = decreased C assimilation = greater PS2 heat tolerance = optimum rate of photosynthesis decreases = exhibiting lower t opt (optimum temp for c assimilation)
 
@@ -449,7 +432,9 @@ There are numerous demographic differences between understory and canopy trees, 
 More interesting in this context is how these shape differences in the climatic sensitivity of growth and mortality.
 Many observations of larger trees suffering more during drought (Bennett et al. 2015).
 One likely mechanism behind this pattern is that the crowns of larger trees exist higher in the vertical profile and therefore are exposed to higher evaporative demand and solar radiation [@mcgregor_tree_nodate].
-Although drought is primarily a hydraulic problem, lack of water --> lower gs --> higher leaf T, so leaves face tradeoffs of water loss vs potentially damaging leafT.
+Although drought is primarily a hydraulic problem, lack of water --> lower gs --> higher leaf T, so leaves face tradeoffs of water loss vs potentially damaging leafT. 
+
+On the basis of phenology, temperate understory  trees tend to leaf out earlier than canopy due to ontogenetic variation in tree size rather than biophysical conditions [Vitasse et al. 2013], and, increase in spring temperatures has shown to have implications on understory phenology, relative to canopy trees [Zohnner and Renner, 2019]. However, short-term May spring heat waves have shown to negetively impact partially expanded canopy leaves by inducing leaf shedding, more than understory saplings [Filewood and Thomas, 2013].
 
 **There is also recently emerging evidence that understory trees tend to exhibit greater growth declines with $T_{air}$ under mesic conditions.** 
 In eight forests across the northeast United States, growth rates of understory trees declined sharply at higher $T_{air}$ [Fig `r fig_treerings` **???**; @rollinsonClimateSensitivityUnderstory].
