--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -353,7 +353,7 @@ nocite: |
 
 ### Stomatal conductance
 
-While exposed sun leaves are equiped to thermoregulate more efficiently than shaded leaves, they are largely constrained by stomatal conductance; and therefore their ability to photosynthesize as well. Diurnally, stomtal conductance increases with height and is greater in the upper canopy compared to shaded canopies during the day [Kenzo et al. 2015; Sanches et al. 2009]. During midday, stomtal closure occurs, when evaporative demand exceeds water transport capacity in exposed leaves [Sanches et al. 2009; Zweinniecki et al. 2004]. Thus, stomatal limitation is greater and steeper in exposed canopies than shade leaves; therefore decreases with height [Sanches et al. 2009; Hernandez]. Similarly, max transpiration rate increases with canopy height [Kenzo et al. 2015]. Stomatal apeture, also controls heat dissapation through evaporative cooling [Taiz and Zeiger], where understory leaves tend to open their stomata wider than upper canopy leaves [Kosugi et al. 2021]. 
+While exposed sun leaves are equipped to thermoregulate more efficiently than shaded leaves, they are largely constrained by stomatal conductance; and therefore their ability to photosynthesize as well. Diurnally, stomtal conductance increases with height and is greater in the upper canopy compared to shaded canopies during the day [Kenzo et al. 2015; Sanches et al. 2009]. During midday, stomtal closure occurs, when evaporative demand exceeds water transport capacity in exposed leaves [Sanches et al. 2009; Zweinniecki et al. 2004]. Thus, stomatal limitation is greater and steeper in exposed canopies than shade leaves; therefore decreases with height [Sanches et al. 2009; Hernandez]. Similarly, max transpiration rate increases with canopy height [Kenzo et al. 2015]. Stomatal apeture, also controls heat dissapation through evaporative cooling [Taiz and Zeiger], where understory leaves tend to open their stomata wider than upper canopy leaves [Kosugi et al. 2021]. 
 
 ### Photosynthesis
 
@@ -371,7 +371,7 @@ Photosynthesis will also be affected by heat stress, when photoinhibition reduce
 
 **We have very little evidence as to how the temperature sensitivity of photosynthesis compares between sun and shade leaves.**
 Biophysically, we might expect that sun leaves should tend to have a stronger temperature-dependence and higher temperature optima than shade leaves (Fig. 14.5 in Campbell and Norman 1998; *revisit this!*), as optimum temperature $T_{opt}$ for $J_{max}$ has shown to increase with irradiance of an upper canopy leaf compared to shaded lower canopy leaf [Niinemetes et al. 1999b; Niinemetes and Valladares, 2004]. However, such a trend is not apparent based on the limited number of field studies that have compared temperature sensitivity of photosynthesis in sun and shade leaves.
-For 3 species in Panama, the optimum temperature for sun leaves tended to be slightly higher than that of shade leaves, but differences were not significant [@slotPhotosyntheticHeatTolerance2019 ; @hernandezSimilarTemperatureDependence2020]. Similar results were found for $V_{max}$ and $J_{max}$ [@slotPhotosyntheticHeatTolerance2019, Hernandez et al.2020]. Similarly, Mau et al. 2018 found no trend in the optimum temperature for net photosynthesis along a height gradient in Puerto Rico, and no significant trend in temperate trees [@mau_temperate_2018].
+For 3 species in Panama, the optimum temperature for sun leaves tended to be slightly higher than that of shade leaves, but differences were not significant [Slot et al. 2019 ; @hernandezSimilarTemperatureDependence2020]. Similar results were found for $V_{max}$ and $J_{max}$ [Slot et al. 2019; @hernandezSimilarTemperatureDependence2020]and along a vertical species profile in Puerto Rico forests, no trend in the optimum temperature for net photosynthesis was found [@mau_temperate_2018; Miller et al. 2020], and no significant trend in temperate trees [@mau_temperate_2018].
 
 *If we take geographic gradients as a reliable proxy, we'd expect temperature sensitivities to reflect the environment to which the trees are adapted/ acclimatized.*
 
@@ -390,7 +390,7 @@ Supporting the significant negative relationship between $T50$ and thermal safet
 
 **Thermal tolerance (e.g., $T_{50}$) varies with exposure, but there are no studies isolating effect of height.**
 For two of three species studied in a tropical moist forest in Panama, $T_{50}$ was slightly lower for shade than sun-exposed leaves, both measured near ground level (Slot et al. 2019). 
-However, for *Acacia Papyrocarpa* (Benth.) trees in an arid region of southern Australia, higher climatic heat stress and thus $T_{50}$ was observed in the lower canopy of North-facing canopy positions (Curtis et al. 2019). 
+However, for *Acacia Papyrocarpa* (Benth.) trees in an arid region of southern Australia, higher climatic heat stress and thus $T_{50}$ was observed in the lower north-facing canopy positions (Curtis et al. 2019). 
 We're not aware of any other studies on this."we may want to argue that we have no *a priori* reasons to expect thermal tolerance to scale with height per se (or do we?). I think it makes sense to expect variation with light exposure because of the associated differences in temperature you can expect the leaves to be exposed to, but height itself should not affect heat tolerance other than through associated traits perhaps"--Martijn Slot
 
 increased irradiance = increased VPD = increased air temp = midday stomatal closure =  decreased latent heat loss = increase leaf temperature = decreased C assimilation = greater PS2 heat tolerance = optimum rate of photosynthesis decreases = exhibiting lower t opt (optimum temp for c assimilation)
