--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -158,7 +158,7 @@ In this review, we focus primarily on growing season conditions, including leaf 
 ### Light environments
 
 **Light conditions, specifically changes in the proportion of incident light and photosynthetically active radiation (PAR), vary along the vertical gradient with leaf area index (LAI), canopy height, canopy structure, and across species and forest types [Fig. `r fig_NEON_vertical`; @koike_leaf_2001].** 
-Generally, along a vertical gradient in forests globally, amount of light decreases from canopy tops to the forest floor. Foliage density mediates light regime, where denser upper canopies exposed to greater PAR values limit light to canopy interiors, lower canopy layers, and the understory. 
+Generally, along a vertical gradient in forests globally, amount of light decreases from canopy tops to the forest floor. Foliage LAI and density mediate light regime, where denser upper canopies exposed to greater PAR values limit light to canopy interiors, lower canopy layers, and the understory. 
 This light gradient is more pronounced under broadleaf forests than needleleaf forests [Fig. `r fig_NEON_vertical`; @lowmanForestCanopies1995; @aussenacInteractionsForestStands2000a; @vonarxSpatiotemporalEffectsForest2012a; @poorterMetaanalysisPlantResponses2019b].
 
 The amount of light reaching lower canopy, understories and forest floors are highly variable, ranging from high light gaps to deeply shaded understory regions [@chazdonPhotosyntheticLightEnvironments1984; @tymenQuantifyingMicroenvironmentalVariation2017; @smithSeasonalDroughtrelatedChanges2019]. Forest floors of tropical forests with densely packed overstory trees, receive approximately 1-2% of the incident light that hits the top of the canopy [@robertsStomatalBoundaryLayerConductances1990a; @chazdonPhotosyntheticLightEnvironments1984; @parkerConsequencesEnvironmentalHeterogeneity2019], whereas mixed-wood boreal and northern temperate forest floors receive around 4-5% of full sunlight [@bartemucciOverstoryInfluencesLight2006]and needle-leaf forest floors receive 17-34% of incoming sunlight [@baldocchiSeasonalVariationEnergy1997]. Small canopy gaps and wind-induced movement of canopy leaves and branches also contribute light in the form sunflecks--around 10-80% of of photon flux density-- to shaded forest regions that receive 1/3 of their carbon  during photosynthesis through these short light exposures [@waySunflecksTreesForests2012]. Additionally, in heterogeneous canopies [with high gap fractions and large variation in tree height], the distance from the outer canopy to the inner canopy is a better proxy for light environment than height (Parker 1995).
@@ -174,13 +174,12 @@ Consistent with these results from NEON sites, higher wind speeds at greater hei
 **Air temperature, $T_{air}$, is sometimes significantly buffered by forest canopies (Fig. `r fig_NEON_vertical`).**
 Studies comparing $T_{air}$ under forest canopies with nearby clearings have found lower maximum temperatures under forest canopies globally [@defrenneGlobalBufferingTemperatures2019]. 
 
-The strength of this buffering varies across forests, and increases with canopy cover, leaf area index ($LAI$) and water availability [@davis_microclimatic_2019]. Diurnally, tropical, temperate broadleaf, mixed-conifer and non-pine conifer forests offset temperatures positively and negatively, by maintaining cooler, lower maximum temperature and vapor pressure deficit ($VPD$) in the daytime, and warmer higher minimum temperature during nighttime in the understory, relative to pine and boreal forests and compared to nearby clearings [@vonarxSpatiotemporalEffectsForest2012a, Defrenne et al. 2021; @davis_microclimatic_2019; @zellweger_seasonal_2019; Rambo and North, 2009]. In comparison to neighboring tree crop agricultural plantations, intact tropical forests also maintain lower peak daytime $T_{air}$ and $VPD$, attesting to increased buffering with LAI and canopy cover [@hardwickRelationshipLeafArea2015; @juckerCanopyStructureTopography2018]. On the other hand, open-forests with sparse stands, have lower buffering capacity, greater vertical air mixing, greater light permeability through canopy layers and sometimes greater soil heating [Rambo and NOrth, 2009]. For this reason, they maintain higher daytime maximum temperature and light availability in the understory, that are closer to nearby clearings [@defrenneGlobalBufferingTemperatures2019; @vonarxSpatiotemporalEffectsForest2012a; @martin_boundary_1999; Rambo and North, 2009]. During the night, pine forests have been observed to maintain warmer understory temperatures than above canopy, due to long wave infrared radiation from the soil caused by daytime solar warming [@vonarxSpatiotemporalEffectsForest2012a]. Canopy roughness also affects buffering, turbulent air flow and the canopy boundary layer. As a result, taller trees up to 20m in an old-growth Borneo forest (which coincided with forests of higher LAI) have shown to lower mean and max of VPD and temperature in the understory. However, beyond a certain tree height, temperature and VPD offset plateaus [@juckerCanopyStructureTopography2018; @hardwickRelationshipLeafArea2015]. 
+The strength of this buffering varies across forests, and increases with canopy cover, leaf area index ($LAI$) and water availability [@davis_microclimatic_2019]. Diurnally, tropical, temperate broadleaf, mixed-conifer and non-pine conifer forests offset temperatures positively and negatively, by maintaining cooler, lower maximum temperature and vapor pressure deficit ($VPD$) in the daytime, and warmer higher minimum temperature during nighttime in the understory, relative to pine and boreal forests and compared to nearby clearings [@vonarxSpatiotemporalEffectsForest2012a, Defrenne et al. 2021; @davis_microclimatic_2019; @zellweger_seasonal_2019; Rambo and North, 2009]. In comparison to neighboring tree crop agricultural plantations, intact tropical forests also maintain lower peak daytime $T_{air}$ and $VPD$, attesting to increased buffering with LAI and canopy cover [@hardwickRelationshipLeafArea2015; @juckerCanopyStructureTopography2018]. On the other hand, open-forests with sparse stands, have lower buffering capacity, thus greater vertical air mixing, greater light permeability through canopy layers and sometimes greater soil heating [Rambo and NOrth, 2009]. For this reason, they maintain higher daytime maximum temperature and light availability in the understory, that are closer to nearby clearings [@defrenneGlobalBufferingTemperatures2019; @vonarxSpatiotemporalEffectsForest2012a; @martin_boundary_1999; Rambo and North, 2009]. During the night, pine forests have shown to maintain warmer understory temperatures than above canopy, due to long wave infrared radiation from the soil caused by daytime solar warming [@vonarxSpatiotemporalEffectsForest2012a]. Canopy roughness also affects buffering, turbulent air flow and the canopy boundary layer. As a result, taller trees up to 20m in an old-growth Borneo forest (which coincided with forests of higher LAI) have shown to lower mean and max of VPD and temperature in the understory. However, beyond a certain tree height, temperature and VPD offset plateaus [@juckerCanopyStructureTopography2018; @hardwickRelationshipLeafArea2015]. 
 
 Seasonally, the capacity to moderate buffering is greater with water availability. During the wet season, tropical forests in Panama [@rey-sanchez_spatial_2016], temperate forests in Switzerland [@vonarxSpatiotemporalEffectsForest2012a] and coastal forests in Brazil [@fauset_differences_2018, Tymen et al. 2017], have all shown to offset temperatures positively in the understory, with lower maximum air temperatures and higher relative humidity below canopies and understories than above forest canopies and gaps. During the dry season of a semi-deciduous tropical forest in Panama, however, maximum temperatures were similar in the upper and lower canopy, partially because in the dry season some canopy trees are leafless, resulting in more light reaching the sub-canopy, and more boundary layer turbulence [@rey-sanchez_spatial_2016]. Similar results were observed in a temperate deciduous forest in the eastern United States [@mcgregor_tree_nodate].
 
 Under colder conditions, minimum $T_{air}$ [$T_{min}$] is also buffered by forest canopies, increasing negetive temperature offset in the understory. Across Europe [@zellweger_seasonal_2019; Defrenne et al. 2021] and in the northwestern United States [@davis_microclimatic_2019] higher minimum temperatures under forest canopies have been observed relative to nearby clearings. Greater radiative heat loss in exposed areas results in lower $T_{min}$. However, similar minimum temperatures under forest canopies have been observed in tropical forests in Panama [@rey-sanchez_spatial_2016] and coastal Brazil [@fauset_differences_2018], as well as in a temperate deciduous forest in the eastern United States [@mcgregor_tree_nodate; @nakamuraForestsTheirCanopies2017].
 
-Thus, we see that buffering by canopy cover smooths the affect temperature extremes and fluctuation in the understory [@bertrandCommentForestMicroclimate2020; @zellwegerResponseCommentForest2020; @rollinsonClimateSensitivityUnderstory; Defrenne et al. 2021],though, as a result of global rise in temperatures, inevitable increases in understory temperatures continue to be observed [@bertrandCommentForestMicroclimate2020].
 
 *(Add something about risk of freeze.)* 
 
@@ -200,7 +199,7 @@ Given that differences are small during the day when photosynthesis is occurring
 
 ### Geographic and climatic factors
 
-With higher altitude, forest light environment varies along with plant growth habits, therefore shapes microclimate conditions. In Switzerland forests, buffering capacity was stronger in low altitude forests than high altitude forests [@vonarxSpatiotemporalEffectsForest2012a], partly because trees here were sparserly distributed [@vonarxSpatiotemporalEffectsForest2012a] and in other high-altitude forests, trees have open canopies with greater light interception through canopy layers [@rajsnerovaMorphologicalBiochemicalPhysiological2015]. Less capacity to buffer climatic conditions in open, high altitude forests might have implications to forest regeneration and climate change [@vonarxSpatiotemporalEffectsForest2012a; @fauset_differences_2018]. This is also observed in  timberline and temperate humid-mountain forests in China, where tree height decreased with altitude, and tree growth sensitivity (based on tree-rings) increased [@liangForestTypeHeight2019]. Whereas in closed-forests, increase in tree height, typically increases buffering in the understory [@juckerCanopyStructureTopography2018].
+With higher altitude, forest light environment varies along with plant growth habits, therefore shapes microclimate conditions. In Switzerland forests, buffering capacity was stronger in low altitude forests than high altitude forests [@vonarxSpatiotemporalEffectsForest2012a], partly because trees in these high-altitude forests are sparserly distributed [@vonarxSpatiotemporalEffectsForest2012a] or have open canopies with greater light interception through canopy layers [@rajsnerovaMorphologicalBiochemicalPhysiological2015]. Less capacity to buffer climatic conditions in open, high altitude forests might have implications to forest regeneration and climate change [@vonarxSpatiotemporalEffectsForest2012a; @fauset_differences_2018]. This is also observed in  timberline and temperate humid-mountain forests in China, where tree height decreased with altitude, and tree growth sensitivity (based on tree-rings) increased [@liangForestTypeHeight2019]. 
 
 The strength of buffering also varies with respect to distance to the coast, topographic position, elevation [@zellweger_seasonal_2019]. Riparian forests tend to sustain buffering, protecting understory temperatures even during increasing temperature extremes compared to open areas by a stream [@davis_microclimatic_2019; @macekMaximumAirTemperature2019]
 
@@ -214,7 +213,7 @@ Maintaining optimum leaf temperature in relation to the biophysical environment,
 ![**Figure `r fig_leaf_T`. Theoretical expectations for variation in the elevation of $T_{leaf}$ above $T_{air}$ in response to (a) shortwave radiation, (b) wind speed, (c) relative humidity, (d) leaf width, and (e) stomatal conductance.** Leaf temperatures were modeled using the tealeaves R package of @muir_tealeaves_2019 parameterized to represent typical conditions for a broadleaf species (*Quercus rubra*) in a mesic temperate forest (Harvard Forest, Massachusetts, USA), as detailed in Appendix `r appendix_tealeaves_methods`. [ISSUE #6](https://github.com/EcoClimLab/vertical-thermal-review/issues/6).](leaf_energy_balance/leaf_energy_balance.png)
 
 **(paragraph on radiation as a driver)**
-Incoming solar radiation is a strong driver of leaf temperature, relative to $T_{air}$, such that even at low maximum $T_{air}$, leaves exposed to high radiation loads can experience elevated $T_{leaf}$, greater than $T_{air}$. On the other hand, under conditions of constant radiation and water availability, increase in $T_{air}$ induces evaporative cooling [Drake et al. 2018] or under high $T_{air}$, can cause leaf heat stress [Fauset et al. 2018]. Dense canopies that buffer understory tend to absorb and reflect incoming radiation, therefore tend to maintain greater $T_{leaf}$ than $T_{air}$ compared to lower canopy or understory, whereas open-forests, with greater light interception to forest floors, in some cases, exhibit a less pronounced gradient of leaf temperatures, and in other cases maintain greater $T_{leaf}$-$T_{air}$ in the lower canopies [**REF**]
+Incoming solar radiation is a strong driver of leaf temperature, relative to $T_{air}$, such that even at low maximum $T_{air}$, leaves exposed to high radiation loads can experience elevated $T_{leaf}$, greater than $T_{air}$. On the other hand, under conditions of constant radiation and water availability, increase in $T_{air}$ induces evaporative cooling [Drake et al. 2018] or under high $T_{air}$ and stomtal limitation, can cause leaf heat stress [Fauset et al. 2018]. 
 
 Greater upper canopy wind speeds (Fig. `r fig_NEON_vertical`) result in higher boundary layer conductance ($g_{a}$) for canopy leaves, which increases linearly with wind velocity [@daudetWindSpeedLeaf1999a]. 
 Large $g_{a}$ to heat transfer, in turn, results in a smaller difference between $T_{leaf}$ and $T_{air}$. 
@@ -236,14 +235,14 @@ While small leaves remain within a few degrees of $T_{air}$, regardless of stoma
 While the high-light environment of the upper canopy would tend to dramatically increase $T_{leaf}$ above $T_{air}$, particularly under low-wind conditions, strong vertical gradients in leaf morphology and sometimes *evapotranspiration* have a counteractive effect, such that vertical trends in $T_{leaf}$ are much less pronounced than would be expected based on the physical setting alone.
 
 
-Particularly, in open forests with sparse distribution of trees, such as in needle-leaf forests, lower canopy $T_{leaf}$ can be substantially warmer than upper canopy $T_{leaf}$, reflecting microclimate conditions of either increased vertical air mixing or heating from the ground [@mullerEvidenceEfficientNonevaporative2021], light permeating through canopy layers and low wind velocity or still air in the lower canopy compared to the upper canopy [@mullerEvidenceEfficientNonevaporative2021; @martin_boundary_1999; @zweifelMiddayStomatalClosure2002; @hadleyInfluenceKrummholzMat1987]. Greater heat stress and $T_{air}$ in the lower canopy is also observed in Australian desert trees [Curtis et al.] and among timberline krummholz needle-leaf trees growing close to the ground [@hadleyInfluenceKrummholzMat1987].  Similarly, in dry conditions, in a semi-decidudous tropical moist forest in Panama where some trees loss canopy leaves, sun leaves can be cooled relative to $T_{air}$ more than lower canopy shade leaves [@rey-sanchez_spatial_2016]. In other dry conditions, inner canopy can be warmer than above canopy and air temperature due to greater relative humidity [Dietz et al. 2007]. Under other conditions $T_{leaf}$ tracks $T_{air}$ and therefore differs little between understory and canopy (Fig. `r fig_NEON_vertical`).
+Particularly, in open forests with sparse distribution of trees, such as in needle-leaf forests, lower canopy $T_{leaf}$ can be substantially warmer than upper canopy $T_{leaf}$, reflecting microclimate conditions of either increased vertical air mixing or heating from the ground [@mullerEvidenceEfficientNonevaporative2021], light permeating through canopy layers and low wind velocity or still air in the lower canopy compared to the upper canopy [@mullerEvidenceEfficientNonevaporative2021; @martin_boundary_1999; @zweifelMiddayStomatalClosure2002; @hadleyInfluenceKrummholzMat1987]. Greater heat stress and $T_{air}$ in the lower canopy closer is also observed in Australian desert trees [Curtis et al.2018] and among timberline krummholz needle-leaf trees, both growing close to the ground [@hadleyInfluenceKrummholzMat1987].  Similarly, in dry conditions, in a semi-decidudous tropical moist forest in Panama where some trees loss canopy leaves, sun leaves can be cooled relative to $T_{air}$ more than lower canopy shade leaves [@rey-sanchez_spatial_2016]. In other dry conditions, inner canopy can be warmer than above canopy and air temperature due to greater relative humidity [Dietz et al. 2007]. Under other conditions $T_{leaf}$ tracks $T_{air}$ and therefore differs little between understory and canopy (Fig. `r fig_NEON_vertical`).
 
 At night when solar radiation is not a factor, differences in $T_{leaf}$ across the vertical gradient are very modest; for instance, @bolstad_foliar_1999 observed similar nighttime $T_{leaf}$'s in the canopy and understory	of a temperate broadleaf forest. 
 
 **However, canopy leaves can reach much higher maximum $T_{leaf}$, and higher $T_{leaf} - T_{air}$, than understory leaves.**
 Especially in closed-canopy forests with increased buffering capacity, large leaf to air temperature differences and high leaf temperatures are found in the upper canopies compared to lower canopies, caused by midday stomatal closure that reduces transpirational cooling [Slot et al. 2019]. This is seen in Atlantic, Brazil forests [@fauset_differences_2018], Puerto Rico tropical wet, moist and subtropical wet forest[@mauTemperateTropicalForest2018a; Miller; ], semi-deciduous tropical forest during the wet season in Panama [@rey-sanchez_spatial_2016], and as well in a temperate forest [@mauTemperateTropicalForest2018a].   
 
-In three forest types- US temperate deciduous, Puerto Rico tropical wet and tropical moist, $T_{leaf_{max}}$ exceeded temperature optimum for photosynthesis $T_{opt}$ in the upper canopies of all three forests, along with increasing $T_{leaf}$ - $T_{air}$  with height. $T_{leaf}$ - $T_{air}$ was observed to be greatest in temperate deciduous forest compared to tropical moist and wet. Greater light input in exposed upper canopy leaves can sometimes elevate leaf temperature $1-7{^\circ}C$ above air temperature, making upper canopy leaves susceptible to heat stress, more than scattered light in lower shaded leaves [Doughty and Gouden, 2008; @mauTemperateTropicalForest2018a] 
+In three forest types- US temperate deciduous, Puerto Rico tropical wet and tropical moist, $T_{leaf_{max}}$ exceeded temperature optimum for photosynthesis $T_{opt}$ in the upper canopies of all three forests, with increasing $T_{leaf}$ - $T_{air}$  with height. $T_{leaf}$ - $T_{air}$ was observed to be greatest in temperate deciduous forest compared to tropical moist and wet. Greater light input in exposed upper canopy leaves can sometimes elevate leaf temperature $1-7{^\circ}C$ above air temperature, making upper canopy leaves susceptible to heat stress, more than scattered light in lower shaded leaves [Doughty and Gouden, 2008; @mauTemperateTropicalForest2018a] 
 
 
 ## Leaf traits 
@@ -279,7 +278,7 @@ However, when it comes to understanding and modeling forest ecosystem function, 
 
 ### Intraspecific variation
 
-Within-individuals exposed canopies subjected to harsher light and biophysical conditions, substanially buffer inner and lower canopies. Thus leaf traits in canopy positions vary accordingly [Casal et al. 2011]. Several studies point towards common variations in leaf anatomical, structural and biochemical trait plasticity at a vertical intra-canopy gradient across individual trees [@sackHowStrongIntracanopy2006; @niinemetsWorldwideAnalysisWithincanopy2015; @chenLeafEconomicsSpectrum2020]. The differences among these traits contribute to leaf temperature distribution across the gradient [@fauset_differences_2018; @michaletzEnergeticCarbonEconomic2016] Table `r table_leaf_traits` summarizes relevant traits for thermal sensitivity.
+Within-individuals exposed substanially buffer inner and lower canopies from light and biophysical conditions. Thus leaf traits in canopy positions vary accordingly [Casal et al. 2011]. Several studies point towards common variations in leaf anatomical, structural and biochemical trait plasticity at a vertical intra-canopy gradient across individual trees [@sackHowStrongIntracanopy2006; @niinemetsWorldwideAnalysisWithincanopy2015; @chenLeafEconomicsSpectrum2020]. The differences among these traits contribute to leaf temperature distribution across the gradient [@fauset_differences_2018; @michaletzEnergeticCarbonEconomic2016] Table `r table_leaf_traits` summarizes relevant traits for thermal sensitivity.
 
 An increasing number of studies point towards the importance of incorporating sun and shade in modelling leaf economic spectrum (LES) traits within-canopy gradient [Chen et al. 2019], because LES theory was developed using mainly sun exposed (upper canopy) leaves. Given the vastly different light environments at the bottom of the canopy and that most leaves in the canopy are likely to be shade leaves, there is a strong research need to better characterize trait relationships and leaf responses through the whole vertical canopy [Keenan and Niinemets 2016]. However, there is also concern for ambiguity in a simplified categorization of 'sun' and 'shade' leaves, due to variation based on within-canopy light, across functional groups, in canopy gaps, and with height and ontogeny (Niinemets et al., 2015; Ishii et al., 2018)
 
@@ -299,15 +298,15 @@ nocite: |
 
 #### Morphological traits
 
-Along the vertical gradient, leaf temperature increases with effective leaf width and leaf size [Fauset et al. 2018], along with thermal time constant that is longer due to the increase in boundary layer thickness and stomatal resistance [@leighInfluenceLeafSize2017; Wright et al. 2019; @fauset_differences_2018]. Therefore, the rate of heat convection per unit area between leaf and air is lower for large leaves and greater for small leaves that are able to dissipate heat more efficiently than large leaves [@leighInfluenceLeafSize2017]. Exposed leaves reduce light exposures, and thus leaf temperature, by maintaining vertical leaf angles, or through temporary wilting [Ishida et al. 1999; Niinemetes, 1998]. Other trait adaptions to dissapting heat such as lobes, serration, longer petiole length and stomtal density are evidently characteristics of sun exposed leaves than shaded leaves, help maintain a lower leaf temperature along a vertical gradient [@leighInfluenceLeafSize2017; @vogelConvectiveCoolingLow1970; @schueppTansleyReviewNo1993; @sackHowStrongIntracanopy2006]
- 
+Along the vertical gradient, exposed leaves are better equipped to dissapate heat, through adaptive traits such as smaller leaf size, leaf dissections--lobes and serration--among other traits, decrease effective leaf width and therefore increase the rate of heat convection per unit area between leaf and air, that lowers leaf temperature. [@leighInfluenceLeafSize2017; @vogelConvectiveCoolingLow1970; @schueppTansleyReviewNo1993; @sackHowStrongIntracanopy2006]. Mechanisms such as vertical leaf angles, temporary wilting reduce surface light exposure and help maintain leaf temperature in exposed canopies [Ishida et al. 1999; Niinemetes, 1998]. Hydraulic traits, for example leaf vein and stomtal density, help maintain a balance between work and life, photosynthesis and thermoregulation, in the high light environment of exposed canopies [Brodribb et al. 2010]. On the other hand, leaf temperature increases with effective leaf width and leaf size [Fauset et al. 2018], along with thermal time constant that is longer due to the increase in boundary layer thickness and stomatal resistance, and lower convective cooling [@leighInfluenceLeafSize2017; Wright et al. 2019; @fauset_differences_2018]. Therefore, shade leaves that typically have greater leaf size and effective leaf width compared to sun leaves, remain cooler in buffered conditions but can become substanially warmer under greater light or $T_{air}$ [@leighInfluenceLeafSize2017].
+
 #### Biochemical and physiological traits
 
-Canopy nitrogen distribution along the vertical gradient optimizes to prevent photoinhition for sun leaves during direct light and shade leaves during sunflecks, and could mediate sun vs. shade leaf response to heatflecks [Kitao et al. 2018]. Therefore, during growing season, nitrogen per area [$N_{area}$], along with LMA, leaf soluble sugars, starch and non-structural carbons increase with height and light, typically greater in exposed canopy positions or sun leaves compared to shade [@cobleLightDrivesVertical2014a; @cobleHowVerticalPatterns2016; Liu et al. 2010]. However, increase in temperature in upper canopy, shows a decrease in LMA and $N_{area}$ [Carter and Cavaleri, 2014] and in leaf soluble sugars, starch and non-structural carbons [Li et al.2016 **double check**]. Phosphorous per area follows a similar trend along the canopy gradient, but with increased growth at higher light P uptake, in some cases, cannot keep up [Poorter et al. 2019]  
+Canopy nitrogen distribution along the vertical gradient optimizes to prevent photoinhition for sun leaves during direct light and shade leaves during sunflecks, and could mediate sun vs. shade leaf response to heatflecks [Kitao et al. 2018]. Therefore, during growing season, nitrogen per area [$N_{area}$], along with LMA, leaf soluble sugars, starch and non-structural carbons increase with height and light, typically greater in exposed canopy positions or sun leaves compared to shade [@cobleLightDrivesVertical2014a; @cobleHowVerticalPatterns2016; Liu et al. 2010]. However, increase in temperature in upper canopy, has been shown to decrease LMA and $N_{area}$ [Carter and Cavaleri, 2014] and leaf soluble sugars, starch and non-structural carbons [Li et al.2016 **double check**]. Phosphorous per area follows a similar trend along the canopy gradient, but with increased growth at higher light P uptake, in some cases, cannot keep up [Poorter et al. 2019]  
  
 ##### *(Carotenoids/Xanthophyll cycle pigments)*
 
-Proportional to vertical light gradients at an inter- and intra-species level, sun exposed leaves have greater pools of xanthophyll pigments, comprised of violaxanthin, antheraxanthin and zeaxanthin [$VAZ$] than in shaded leaves. [$VAZ$]--an antioxidant scavenging function--protects against cellular damage by converting excess light into heat energy dissipation through non photochemical quenching of excitation energy, enabling short-term acclimation to high temperature and light [@mathurPhotosyntheticEfficiencySun2018a; @niinemetsAcclimationHighIrradiance1998]. 
+Proportional to vertical light gradients at an intra- and inter-species level, sun exposed leaves have greater pools of xanthophyll pigments, comprised of violaxanthin, antheraxanthin and zeaxanthin [$VAZ$] than in shaded leaves. [$VAZ$]--an antioxidant scavenging function--protects against cellular damage by converting excess light into heat energy dissipation through non photochemical quenching of excitation energy, enabling short-term acclimation to high temperature and light [@mathurPhotosyntheticEfficiencySun2018a; @niinemetsAcclimationHighIrradiance1998]. 
   
 
 #### Leaf lifespan and Deciduousness ("Lifecycle / ecological traits? ")
@@ -324,7 +323,7 @@ Proportional to vertical light gradients at an inter- and intra-species level, s
 
 ### Interspecific varaiation 
 
-Across tree-size ontogeny, canopy and understory trees of same species in tropical, temperate, and conifer forests show significant differences in fundamental light adapted leaf traits in their biophysical environment as observed and similar to within-species gradient [Rosendaal et al. 2006; Thomas and Winner, 2002; Houter and Pons 2012]. Under constant light conditions of open-grown canopy and understory trees, for example in large gaps, ontogeny differences in traits showed significantly greater LMA, photosynthetic capcity per area, and stomatal conductance in taller canopy trees compared to saplings [Thomas and Winner, 2002; Houter and Pons 2012]. Across  multi-species canopy and understory, while fundamental adaptations to light and water are observed, their pasticity to light differs along with inherent traits such as leaf shape, size and width, stomtal conductance levels influence leaf temperatures. Therefore, some species might more susceptible to heat stress at a vertical gradient than others [Fauset et al. 2018]. 
+Across tree-size ontogeny, canopy and understory trees of same species in tropical, temperate, and conifer forests show fundamental light adapted leaf traits in their biophysical environment as observed and similar to within-species gradient [Rosendaal et al. 2006; Thomas and Winner, 2002; Houter and Pons 2012]. Under constant light conditions of open-grown canopy and understory trees, for example in large gaps, ontogeny differences in traits showed significantly greater LMA, photosynthetic capcity per area, and stomatal conductance in taller canopy trees compared to saplings [Thomas and Winner, 2002; Houter and Pons 2012]. Across  multi-species canopy and understory, while fundamental adaptations to light and water are observed, their pasticity to light differs along with inherent traits such as leaf shape, size and width, stomtal conductance levels influence leaf temperatures. Therefore, some species might more susceptible to heat stress at a vertical gradient than others [Fauset et al. 2018]. 
 
 Ontogenetic differences also suggests shade tolerators have lower leaf dry mass per area ($M_A$), greater photosynthetic capacity in low light and greater carbon gain capacities than in intolerators [@niinemetsControversyTraitsConferring2006]. While shade intolerant species experience greater heterogeneity in light during ontogeny [poorter et al. 2013]. However, these findings conflict with  Kitajima 1994 who found for tropical seedlings; shade intolerance species grew faster in the sun and in the shade, but at the cost of higher mortality in the shade. Lawren and Karoru had contrasting findinds, and so far appears that there is no a consensus? How will leaf temperature vary between the two?
 
@@ -371,7 +370,7 @@ Photosynthesis will also be affected by heat stress, when photoinhibition reduce
 
 **We have very little evidence as to how the temperature sensitivity of photosynthesis compares between sun and shade leaves.**
 Biophysically, we might expect that sun leaves should tend to have a stronger temperature-dependence and higher temperature optima than shade leaves (Fig. 14.5 in Campbell and Norman 1998; *revisit this!*), as optimum temperature $T_{opt}$ for $J_{max}$ has shown to increase with irradiance of an upper canopy leaf compared to shaded lower canopy leaf [Niinemetes et al. 1999b; Niinemetes and Valladares, 2004]. However, such a trend is not apparent based on the limited number of field studies that have compared temperature sensitivity of photosynthesis in sun and shade leaves.
-For 3 species in Panama, the optimum temperature for sun leaves tended to be slightly higher than that of shade leaves, but differences were not significant [Slot et al. 2019 ; @hernandezSimilarTemperatureDependence2020]. Similar results were found for $V_{max}$ and $J_{max}$ [Slot et al. 2019; @hernandezSimilarTemperatureDependence2020]and along a vertical species profile in Puerto Rico forests, no trend in the optimum temperature for net photosynthesis was found [@mau_temperate_2018; Miller et al. 2020], and no significant trend in temperate trees [@mau_temperate_2018].
+For 3 species in Panama, the optimum temperature for sun leaves tended to be slightly higher than that of shade leaves, but differences were not significant [Slot et al. 2019 ; @hernandezSimilarTemperatureDependence2020]. Similar results were found for $T_{opt}$ of $V_{max}$ and $J_{max}$ [Slot et al. 2019; @hernandezSimilarTemperatureDependence2020],as well in vertical species profile in Puerto Rico forests, no trend in the optimum temperature for net photosynthesis was found [@mau_temperate_2018; Miller et al. 2020], and no significant trend in temperate trees [@mau_temperate_2018].
 
 *If we take geographic gradients as a reliable proxy, we'd expect temperature sensitivities to reflect the environment to which the trees are adapted/ acclimatized.*
 
@@ -382,15 +381,16 @@ For 3 species in Panama, the optimum temperature for sun leaves tended to be sli
 **Leaf thermal tolerance (Tcrit/ T50)**
 $T_{crit}$ is the temperature at which efficiency of photosystem II starts to decrease, based on chlorphyll a flourescence; and $T_{50}$ represents temperature at which the efficiency of photosystem II had decreased by 50% [Slot et al. 2020]. Leaf thermal thresholds strongly reflect species adaptation to their microenvironment rather than macroclimate conditions [@feeley_thermal_2020; Slot et al. 2020; Perez and Feely 2020a] and phylogeny [Slot et al. 2020; Perez and Feeley 2020a]. 
 
-Typical values across latitude and climate are ~45-50$^\circ$C (O' sullivan et al. 2017). Across species, in Panama, Columbia and across latitudes, $T_{50}$ and $T_{crit}$ decreased with elevation [@feeley_thermal_2020;  Slot et al 2020; O' sullivan et al. 2017] and varies with leaf traits [Sastry et al. 2018, @zhang_photosynthetic_2012; Slot et al. 2020] and their thermal time constant. Species with large leaves, and slow heating and cooling time [higher thermal time constant] showed greater $T_{crit}$. On the other hand, leaves of species with greater construction costs, observed through LMA, had greater $T_{50}$ compared to species with low LMA [Slot et al. 2020]. However, higher photosynthetic heat tolerance does not necessary increase leaf thermal safety margins, rather, in across species sun leaves, higher photosynthetic heat tolerance experienced higher maximum temperatures, low optimum temperature for C assimilation [$T_{opt}$] and had narrower thermal safety margins [Perez and Feeley, 2020]
+Typical values across latitude and climate are ~45-50$^\circ$C (O' sullivan et al. 2017). Across forest species, in Panama, Columbia and across latitudes, $T_{50}$ and $T_{crit}$ decreased with elevation [@feeley_thermal_2020;  Slot et al 2020; O' sullivan et al. 2017] and varies with leaf traits [Sastry et al. 2018, @zhang_photosynthetic_2012; Slot et al. 2020]. Species with large leaves, and slow heating and cooling time [higher thermal time constant] showed greater $T_{crit}$. On the other hand, leaves of species with greater construction costs, observed through LMA, had greater $T_{50}$ compared to species with low LMA [Slot et al. 2020]. However, higher photosynthetic heat tolerance does not necessary increase leaf thermal safety margins, rather, in across species sun leaves, higher photosynthetic heat tolerance experienced higher maximum temperatures, and showed low optimum temperature for C assimilation [$T_{opt}$] and had narrower thermal safety margins [Perez and Feeley, 2020]
 
 **Thermal tolerance (e.g., $T_{50}$) varies with exposure, but there are no studies isolating effect of height.**
 Thermal tolerance $T_{crit}$ and $T_{50}$ have been predominantly measured on sun leaves; thus there remains limited information on leaves with varying light exposures and vertical height gradient. 
 
 For two of three species studied in a tropical moist forest in Panama, $T_{50}$ was slightly lower for shade than sun-exposed leaves, though the results weren't significant and both were measured near ground level [Slot et al. 2019]. In tall grass prarie gallery forest in Kansas, photosynthetic heat tolerance measured on chinquapin oak (*Quercus muehlenbergii*) that grew in xeric, sunnier conditions had higher heat tolerance (by $2{^\circ}C$) than bur oak (*Quercus macrocarpa*) that grew in shaded mesic conditions. In both species photosynthetic heat tolerance increased from June to August.
-In other cases, leaf thermal tolerance might reflect microclimatic stress along a vertical gradient. For *Acacia Papyrocarpa* (Benth.) trees in an arid region of southern Australia, higher composite climate stress and thus $T_{50}$ was observed in the lower north-facing canopy position compared to other canopy positions (Curtis et al. 2019). Greater $T_{50}$ in lower north-position correlated with longer leaf thermal time constants, along with with low-wind speed and greater canopy and air temperature [Curtis et al. 2018]. 
 
-**We're not aware of any other studies on this."we may want to argue that we have no *a priori* reasons to expect thermal tolerance to scale with height per se (or do we?). I think it makes sense to expect variation with light exposure because of the associated differences in temperature you can expect the leaves to be exposed to, but height itself should not affect heat tolerance other than through associated traits perhaps"--Martijn Slot**
+In other cases, leaf thermal tolerance reflects microclimatic stress along a vertical gradient. For *Acacia Papyrocarpa* (Benth.) trees in an arid region of southern Australia, higher composite climate stress and thus $T_{50}$ was observed in the lower north-facing canopy position compared to other canopy positions (Curtis et al. 2019). Greater $T_{50}$ in lower north-position correlated with longer leaf thermal time constants, along with with low-wind speed and greater canopy and air temperature [Curtis et al. 2019]. 
+
+We're not aware of any other studies on this."we may want to argue that we have no *a priori* reasons to expect thermal tolerance to scale with height per se (or do we?). I think it makes sense to expect variation with light exposure because of the associated differences in temperature you can expect the leaves to be exposed to, but height itself should not affect heat tolerance other than through associated traits perhaps"--Martijn Slot*
 
 
 ### Respiration
